--- a/Blogs/HistoricDataVisualisation.html
+++ b/Blogs/HistoricDataVisualisation.html
@@ -29,6 +29,10 @@
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/InformationIsBeautiful.html"> Bonus Analysis: Information Is Beautiful</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/StyleGuide.html"> Website Style Guide</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/EthicsAndRiskyTechnology.html">Reflection: Ethical Reflection On Risky Technologies</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HeatmapReflection.html">Critical Reflection: Coronavirus Heatmap</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/DataVisualisationReflection.html">Bonus reflection: Circular Packing Graph</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/ArtisticDataVisualisation.html">Reflection: Artistic Data Visualisation</a>
         </section>
       </article> 
       <a href="../index.html">Home</a>
@@ -143,6 +147,10 @@
       <a href="InformationIsBeautiful.html">4</a>
       <a href="StyleGuide.html">5</a>
       <a href="WireFrames.html">6</a>
+      <a href="EthicsAndRiskyTechnology.html">7</a>
+      <a href="HeatmapReflection.html">8</a>
+      <a href="DataVisualisationReflection.html">9</a>
+      <a href="ArtisticDataVisualisation.html">10</a>
        <a href="CommunicatingData.html">&raquo;</a>
   </section>
 
