--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -45,8 +45,8 @@
     <h1 class="glow">Choose A Graph</h1>
 
     <section class="options">
-        <button class="button"><strong>Circular Packing Graph</strong></button>
-        <button class="button"><strong>Heatmap</strong></button>
+        <button class="button" onclick="window.location.href='graph.html'"><strong>Circular Packing Graph</strong></button>
+        <button class="button" onclick="window.location.href='heatmap.html'"><strong>Heatmap</strong></button>
         <button class="button"><strong>Coming Soon</strong></button>
         </section>
   </main>
