--- a/CreativeWork/heatmap.html
+++ b/CreativeWork/heatmap.html
@@ -369,7 +369,7 @@ svg.append("text")
         .style("font-size", "14px")
         .style("fill", "grey")
         .style("max-width", 400)
-        .text("A heatmap reflecting comparable coronavirus data");
+        .text("A heatmap reflecting comparable coronavirus data. The higher the number in each category, the darker the shade of the circle");
        
     </script>
 
