--- a/Blogs/ArtisticDataVisualisation.html
+++ b/Blogs/ArtisticDataVisualisation.html
@@ -65,7 +65,7 @@
     <!-- Pagination -->
     <section class="pagination">
         <a href="DataVisualisationReflection.html">&laquo;</a>
-        <a href="TheoriesOfRepresentation.html" class="activeP">1</a>
+        <a href="TheoriesOfRepresentation.html">1</a>
         <a href="HistoricDataVisualisation.html">2</a>
         <a href="CommunicatingData.html">3</a>
         <a href="InformationIsBeautiful.html">4</a>
