--- a/Blogs/CommunicatingData.html
+++ b/Blogs/CommunicatingData.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Reflection: Communicating Data</title>
-    <meta name= "description" content="This is a blog post consisting of a reflection and analysis of 'Theories of representation' from Kidd, J. (2015) "/>
+    <meta name= "description" content="This is a blog post consisting of a reflection and analysis of 'Communicating Data To An AUdience' by Riche, N. H. et al. (2018) "/>
     <meta name="keywords" content="Data Visualisation, blog, interactive media, Digitial Arts, Student 1771810, interactive media 3, WSOA4174"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" media="print">
     <link rel="stylesheet" type="text/css" href="../CSS/Blog.css">
