--- a/Blogs/HeatmapReflection.html
+++ b/Blogs/HeatmapReflection.html
@@ -52,7 +52,7 @@
   visualisation, then reflect on the communication strategies that I have implemented in the graph, as well as, highlight any limitations 
   and improvements.</p>
 
-<p>According to daily egg, a heatmap is a data visualisation that <cite>“uses color the way a bar graph uses height and width: as a 
+<p>According to daily egg, a heatmap is a data visualisation that <cite>“uses colour the way a bar graph uses height and width: as a 
   data visualization tool.”</cite> (TheDailyEgg 2020). That is to say, as a bar graph uses the height of each bar to reflect numbers, 
   in a heatmap colour is used to reflect numbers. One of the main benefits of heatmaps is that they provide a visual approach to 
   understanding the intensity of numeric values. I chose a heatmap as a data visualisation so as to better compare coronavirus data 
@@ -93,7 +93,7 @@
   to reach its full potential. In future data visualisations, I aim to make the main focus of the technical aspect interactivity. </p>
 
 
-<p><strong>(1083 Words)</strong></p>
+<p><strong>(726 Words)</strong></p>
     </section>
 
     <!-- References -->
@@ -113,7 +113,7 @@
     <!-- Pagination -->
     <section class="pagination">
         <a href="EthicsAndRiskyTechnology.html">&laquo;</a>
-        <a href="TheoriesOfRepresentation.html" class="activeP">1</a>
+        <a href="TheoriesOfRepresentation.html">1</a>
         <a href="HistoricDataVisualisation.html">2</a>
         <a href="CommunicatingData.html">3</a>
         <a href="InformationIsBeautiful.html">4</a>
