--- a/Blogs/StyleGuide.html
+++ b/Blogs/StyleGuide.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Website Style Guide</title>
-    <meta name= "description" content="This is a blog post consisting of a reflection and analysis of 'Theories of representation' from Kidd, J. (2015) "/>
+    <meta name= "description" content="This is a blog post consisting of my website style guide and reflection"/>
     <meta name="keywords" content="Data Visualisation, blog, interactive media, Digitial Arts, Student 1771810, interactive media 3, WSOA4174"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" media="print">
     <link rel="stylesheet" type="text/css" href="../CSS/Blog.css">
