--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>ViCoDa WireFrames</title>
-    <meta name= "description" content="This is a list of refernces for images used throughout the blog"/>
+    <meta name= "description" content="This is a collection of the website wireframes"/>
     <meta name="keywords" content="Data Visualisation, blog, interactive media, Digitial Arts, Student 1771810, interactive media 3, WSOA4174"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" media="print">
