--- a/CreativeWork/donut.html
+++ b/CreativeWork/donut.html
@@ -77,7 +77,7 @@
     </section>
 
     <!-- Circular Packing Graph  -->
-    <article id="myViz" style="padding-left: 30%"></article>
+    <article id="myViz" width ="650" height ="650" style="padding-left: 30%"></article>
   </main>
 </body>
 </html>
