--- a/CreativeWork/exam.html
+++ b/CreativeWork/exam.html
@@ -69,7 +69,7 @@
     </section>
 
     <!-- Circular Packing Graph  -->
-    <article id="myViz"style="padding-left: 29%"></article>
+    <article id="myViz" width ="650" height ="650" style="padding-left: 29%"></article>
   </main>
 </body>
 </html>
