--- a/CreativeWork/exam.html
+++ b/CreativeWork/exam.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" media="print">
     <script type="module" src="../JavaScript/navbar.js"></script>
     <script type="module" src="../JavaScript/exam.js"></script>
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://d3js.org/d3.v4.js"></script>
     <link rel="stylesheet" type="text/css" href="../CSS/navbar.css">
     <link rel="stylesheet" type="text/css" href="../CSS/DeltaGraph.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -70,49 +70,6 @@
 
     <!-- Circular Packing Graph  -->
     <article id="myViz" style="padding-left: 29%"></article>
-
-    <script>
-      fetch('https://api.covid19api.com/summary')  
-              .then(response => response.json())                               
-              .then(data => {console.log(data) 
-});
-
-const width = 650
-const height = 650
-const margin = 40
-
-const radius = Math.min(width, height) / 2 - margin
-
-const svg = d3.select("#myViz")
-  .append("svg")
-    .attr("width", width)
-    .attr("height", height)
-  .append("g")
-    .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
-
-const data = {a: 58640945, b: 11728189,}
-
-const color = d3.scaleOrdinal()
-  .domain(data)
-  .range(["#310B12", "#0492C2",])
-
-const pie = d3.pie()
-  .value(function(d) {return d.value; })
-const data_ready = pie(d3.entries(data))
-
-svg
-  .selectAll('whatever')
-  .data(data_ready)
-  .enter()
-  .append('path')
-  .attr('d', d3.arc()
-    .innerRadius(0)
-    .outerRadius(radius)
-  )
-  .attr('fill', function(d){ return(color(d.data.key)) })
-  .attr("stroke", "orange")
-  .style("stroke-width", "3px")
-    </script>
   </main>
 </body>
 </html>
