--- a/CreativeWork/exam.html
+++ b/CreativeWork/exam.html
@@ -60,15 +60,15 @@
    <section style="text-align: center; width: 1000">
     <svg> 
      <rect x="50" y="50" width="10" height="10" fill="#310B12"/>
-     <text x="70" y="60" font-size="" fill="Black"> Total Confirmed: 58 640 945 </text>
+     <text x="70" y="60" font-size="" fill="Black"> New Confirmed: 578 938 </text>
     </svg>
     <svg> 
      <rect x="50" y="50" width="10" height="10" fill="#0492C2"/>
-     <text x="70" y="60" font-size="" fill="Black"> Hospital Caused: 11 728 189</text>
+     <text x="70" y="60" font-size="" fill="Black"> Hospital Caused: 115 788</text>
     </svg>
     </section>
 
-    <!-- Circular Packing Graph  -->
+    <!-- Pie Chart  -->
     <article id="myViz" style="padding-left: 29%"></article>
   </main>
 </body>
