--- a/CreativeWork/heatmap.html
+++ b/CreativeWork/heatmap.html
@@ -47,9 +47,9 @@
 
     <!-- Introduction Section -->
     <section style="max-width:700px; margin:auto;">
-      <p style="padding-top: 6%"><cite>“A sunrise is a wondrous marvel, but in reality the sun never rises. 
-        It is the earth that rotates to face the sun. Life too can be a wondrous marvel, but like the earth, 
-        we must turn our eyes toward brighter things.”</cite> ~ Unkown</cite></p>
+      <p style="padding-top: 6%"><cite>“There can be no knowledge without emotion. We may be aware of a truth, 
+        yet until we have felt its force, it is not ours. To the cognition of the brain must
+         be added the experience of the soul.”</cite> ~ Arnold Bennett</cite></p>
     </section>
   
     <!-- Graph Heading And Extra Detail -->
