--- a/CreativeWork/donut.html
+++ b/CreativeWork/donut.html
@@ -43,7 +43,7 @@
   </header>
 
   <main>
-    <h1 class="glow">CORONAVIRUS API DATA VISUALISATION (3)</h1>
+    <h1 class="glow">A Wonted Marvel Data Visualisation</h1>
         
     <!-- Creative Work Introduction Section -->
     <section style="max-width:700px; margin:auto;">
@@ -52,7 +52,7 @@
     </section>
 
     <!-- Graph Heading And Extra Detail -->
-   <h2>Global Coronavirus Donut Chart</h2>
+   <h2>Global Coronavirus Confirmed Cases Donut Chart</h2>
    <h3>Reflecting Data From Saturday 21 November 2020</h3>
 
    <!-- Graph Keys -->
