--- a/CreativeWork/exam.html
+++ b/CreativeWork/exam.html
@@ -43,18 +43,18 @@
   </header>
 
   <main>
-    <h1 class="glow">CORONAVIRUS API DATA VISUALISATION (Exam)</h1>
+    <h1 class="glow">A Simple But Significant Data Visualisation(Exam)</h1>
         
     <!-- Creative Work Introduction Section -->
     <section style="max-width:700px; margin:auto;">
-    <p style="padding-top: 6%"><cite>“A sunrise is a wondrous marvel, but in reality the sun never rises. 
-      It is the earth that rotates to face the sun. Life too can be a wondrous marvel, but like the earth, 
-      we must turn our eyes toward brighter things.”</cite> ~ Unkown</cite></p>
+    <p style="padding-top: 6%"><cite>“A single-story cannot possibly address all possible different audiences and their needs. 
+      And any well-designed story will be tailored not just to its 
+      data and the intended message, but to its audience.”</cite> ~ Riche et al</cite></p>
     </section>
 
     <!-- Graph Heading And Extra Detail -->
-   <h2>Global Coronavirus Confirmed Cases Data Hierarchy </h2>
-   <h3>Reflecting Data From Saturday 19th September 2020</h3>
+   <h2>Global Confirmed Coronavirus Cases Data Insight Pie Chart </h2>
+   <h3>Reflecting Data From Saturday 21 November 2020</h3>
 
    <!-- Graph Keys -->
    <section style="text-align: center; width: 1000">
