--- a/CreativeWork/graph.html
+++ b/CreativeWork/graph.html
@@ -43,7 +43,7 @@
   </header>
 
   <main>
-    <h1 class="glow">CORONAVIRUS API DATA VISUALISATION (1)</h1>
+    <h1 class="glow">A Wondrous Marvel Data Visualisation</h1>
         
     <!-- Creative Work Introduction Section -->
     <section style="max-width:700px; margin:auto;">
