--- a/CreativeWork/heatmap.html
+++ b/CreativeWork/heatmap.html
@@ -43,7 +43,7 @@
   </header>
 
   <main>
-    <h1 class="glow">CORONAVIRUS API DATA VISUALISATION (2)</h1>
+    <h1 class="glow">Truths Of Knowledge & Perceptions Data Visualisation</h1>
 
     <!-- Introduction Section -->
     <section style="max-width:700px; margin:auto;">
@@ -53,7 +53,7 @@
     </section>
   
     <!-- Graph Heading And Extra Detail -->
-    <h2>Coronavirus Data Heatmap</h2>
+    <h2>Comparative Coronavirus Data Heatmap</h2>
     <h3>Reflecting Data From Wednesday 21st October 2020</h3>
 
     <!-- Graph  -->
