--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -45,9 +45,10 @@
     <h1 class="glow">Choose A Graph</h1>
 
     <section class="options">
-        <button class="button" onclick="window.location.href='graph.html'"><strong>Circular Packing Graph</strong></button>
-        <button class="button" onclick="window.location.href='heatmap.html'"><strong>Heatmap</strong></button>
-        <button class="button"><strong>Coming Soon</strong></button>
+        <button class="button" onclick="window.location.href='graph.html'"><strong>A Wondrous Marvel</strong></button>
+        <button class="button" onclick="window.location.href='heatmap.html'"><strong>Truths Of Knowledge & Perceptions</strong></button>
+        <button class="button" onclick="window.location.href='donut.html'"><strong>A Wonted Marvel</strong></button>
+        <button class="button" onclick="window.location.href='examvid.html'"><strong>Simple But Significant(Exam)</strong></button>
         </section>
   </main>
 </body>
