--- a/CreativeWork/graph.html
+++ b/CreativeWork/graph.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar" id="myNav" style="background-color: white;">
       <a href="../References/index.html" >References</a>
-      <a href="../CreativeWork/index.html">Creative Work</a>
+      <a href="../CreativeWork/index.html" class="active">Creative Work</a>
       <a href="../About/index.html">About</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
@@ -34,7 +34,7 @@
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/EthicsAndRiskyTechnology.html">Reflection: Ethical Reflection On Risky Technologies</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HeatmapReflection.html">Critical Reflection: Coronavirus Heatmap</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/DataVisualisationReflection.html">Bonus Analysis: Circular Packing Graph</a>
-          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/ArtisticDataVisualisation.html">Reflection: Artistic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/ExamReflection.html">Reflection: Exam Data Visualisation</a>
         </section>
       </article>  
       <a href="../index.html">Home</a>
@@ -46,7 +46,7 @@
     <h1 class="glow">A Wondrous Marvel Data Visualisation</h1>
         
     <!-- Creative Work Introduction Section -->
-    <section style="max-width:700px; margin:auto;">
+    <section class="intro">
     <p style="padding-top: 6%"><cite>“A sunrise is a wondrous marvel, but in reality the sun never rises. 
       It is the earth that rotates to face the sun. Life too can be a wondrous marvel, but like the earth, 
       we must turn our eyes toward brighter things.”</cite> ~ Unkown</cite></p>
@@ -57,7 +57,7 @@
    <h3>Reflecting Data From Saturday 19th September 2020</h3>
 
    <!-- Graph Keys -->
-   <section style="text-align: center;">
+   <section class="keys">
     <svg> 
      <rect x="50" y="50" width="10" height="10" fill="#310B12"/>
      <text x="70" y="60" font-size="" fill="Black"> Total Confirmed: 30 401 165 </text>
@@ -81,6 +81,15 @@
 
     <!-- Circular Packing Graph  -->
     <svg id="viz" width="1500" height="630"></svg>
+
+    <!-- Pagination -->
+    <section class="pagination">
+      <a href="graph.html" class="activeP">1</a>
+      <a href="heatmap.html">2</a>
+      <a href="donut.html">3</a>
+      <a href="exam.html">4</a>
+      <a href="heatmap.html">&raquo;</a>
+  </section>
   </main>
 </body>
 </html>
