--- a/CreativeWork/heatmap.html
+++ b/CreativeWork/heatmap.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar" id="myNav" style="background-color: white;">
       <a href="../References/index.html" >References</a>
-      <a href="../CreativeWork/index.html">Creative Work</a>
+      <a href="../CreativeWork/index.html" class="active">Creative Work</a>
       <a href="../About/index.html">About</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
@@ -34,7 +34,7 @@
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/EthicsAndRiskyTechnology.html">Reflection: Ethical Reflection On Risky Technologies</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HeatmapReflection.html">Critical Reflection: Coronavirus Heatmap</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/DataVisualisationReflection.html">Bonus Analysis: Circular Packing Graph</a>
-          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/ArtisticDataVisualisation.html">Reflection: Artistic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/ExamReflection.html">Reflection: Exam Data Visualisation</a>
         </section>
       </article>  
       <a href="../index.html">Home</a>
@@ -46,7 +46,7 @@
     <h1 class="glow">Truths Of Knowledge & Perceptions Data Visualisation</h1>
 
     <!-- Introduction Section -->
-    <section style="max-width:700px; margin:auto;">
+    <section class="intro">
       <p style="padding-top: 6%"><cite>“There can be no knowledge without emotion. We may be aware of a truth, 
         yet until we have felt its force, it is not ours. To the cognition of the brain must
          be added the experience of the soul.”</cite> ~ Arnold Bennett</cite></p>
@@ -57,7 +57,17 @@
     <h3>Reflecting Data From Wednesday 21st October 2020</h3>
 
     <!-- Graph  -->
-    <section id="my_heatmap" style="padding-left: 10%;"></section>
+    <section id="my_heatmap" class="heatmap"></section>
+
+    <!-- Pagination -->
+    <section class="pagination">
+      <a href="graph.html">&laquo;</a>
+      <a href="graph.html">1</a>
+      <a href="heatmap.html" class="activeP">2</a>
+      <a href="donut.html">3</a>
+      <a href="exam.html">4</a>
+      <a href="donut.html">&raquo;</a>
+  </section>
 
   </main>
 </body>
