--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar" id="myNav" style="background-color: white;">
       <a href="../References/index.html" >References</a>
-      <a href="../CreativeWork/index.html">Creative Work</a>
+      <a href="../CreativeWork/index.html"  class="active">Creative Work</a>
       <a href="../About/index.html">About</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
@@ -33,7 +33,7 @@
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/EthicsAndRiskyTechnology.html">Reflection: Ethical Reflection On Risky Technologies</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HeatmapReflection.html">Critical Reflection: Coronavirus Heatmap</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/DataVisualisationReflection.html">Bonus Analysis: Circular Packing Graph</a>
-          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/ArtisticDataVisualisation.html">Reflection: Artistic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/ExamReflection.html">Reflection: Exam Data Visualisation</a>
         </section>
       </article>  
       <a href="../index.html">Home</a>
@@ -48,7 +48,7 @@
         <button class="button" onclick="window.location.href='graph.html'"><strong>A Wondrous Marvel</strong></button>
         <button class="button" onclick="window.location.href='heatmap.html'"><strong>Truths Of Knowledge & Perceptions</strong></button>
         <button class="button" onclick="window.location.href='donut.html'"><strong>A Wonted Marvel</strong></button>
-        <button class="button" onclick="window.location.href='examvid.html'"><strong>Simple But Significant(Exam)</strong></button>
+        <button class="button" onclick="window.location.href='exam.html'"><strong>Simple But Significant(Exam)</strong></button>
         </section>
   </main>
 </body>
