--- a/CreativeWork/donut.html
+++ b/CreativeWork/donut.html
@@ -85,10 +85,10 @@
       <h3>Despite the continuous increase in recoveries, it's important that we practice the relevant safety precautions to avoid further infections.</h3>
       <h3>Choose from the options below to find out how to protect yourself and others while enjoying a bit of freedom.</h3>
         <section class="options">
-          <button class="button" onclick="window.location.href='graph.html'"><strong>Shopping Centre</strong></button>
-          <button class="button" onclick="window.location.href='heatmap.html'"><strong>Restuarant</strong></button>
-          <button class="button" onclick="window.location.href='donut.html'"><strong>School</strong></button>
-          <button class="button" onclick="window.location.href='examvid.html'"><strong>Church</strong></button>
+          <button class="button" onclick="window.location.href='../images/InfoRest.jpg'"><strong>Shopping Centre</strong></button>
+          <button class="button" onclick="window.location.href='../images/InfoRest.jpg'"><strong>Restuarant</strong></button>
+          <button class="button" onclick="window.location.href='../images/InfoSchool.png'"><strong>School</strong></button>
+          <button class="button" onclick="window.location.href='../images/InfoChurch.jpg'"><strong>Church</strong></button>
           </section>
     </article>
 
