--- a/CreativeWork/donut.html
+++ b/CreativeWork/donut.html
@@ -89,7 +89,8 @@
           <button class="button" onclick="window.location.href='../images/InfoRest.jpg'"><strong>Restuarant</strong></button>
           <button class="button" onclick="window.location.href='../images/InfoSchool.png'"><strong>School</strong></button>
           <button class="button" onclick="window.location.href='../images/InfoChurch.jpg'"><strong>Church</strong></button>
-          </section>
+        </section>
+      <h3><a href="../References/index.html">References</h3>
     </article>
 
     <!-- Pagination -->
