--- a/Blogs/EthicsAndRiskyTechnology.html
+++ b/Blogs/EthicsAndRiskyTechnology.html
@@ -139,7 +139,7 @@
         <a href="EthicsAndRiskyTechnology.html" class="activeP">7</a>
         <a href="HeatmapReflection.html">8</a>
         <a href="DataVisualisationReflection.html">9</a>
-        <a href="ArtisticDataVisualisation.html">10</a>
+        <a href="ExamReflection.html">10</a>
         <a href="HeatmapReflection.html">&raquo;</a>
     </section>
 
