--- a/Blogs/ExamReflection.html
+++ b/Blogs/ExamReflection.html
@@ -74,7 +74,7 @@
         <a href="EthicsAndRiskyTechnology.html">7</a>
         <a href="HeatmapReflection.html">8</a>
         <a href="DataVisualisationReflection.html">9</a>
-        <a href="ArtisticDataVisualisation.html" class="activeP">10</a>
+        <a href="ExamReflection.html" class="activeP">10</a>
     </section>
 
   </main>
