--- a/Blogs/HeatmapReflection.html
+++ b/Blogs/HeatmapReflection.html
@@ -122,7 +122,7 @@
         <a href="EthicsAndRiskyTechnology.html">7</a>
         <a href="HeatmapReflection.html" class="activeP">8</a>
         <a href="DataVisualisationReflection.html">9</a>
-        <a href="ArtisticDataVisualisation.html">10</a>
+        <a href="ExamReflection.html">10</a>
          <a href="DataVisualisationReflection.html">&raquo;</a>
     </section>
 
