--- a/Blogs/HistoricDataVisualisation.html
+++ b/Blogs/HistoricDataVisualisation.html
@@ -150,7 +150,7 @@
       <a href="EthicsAndRiskyTechnology.html">7</a>
       <a href="HeatmapReflection.html">8</a>
       <a href="DataVisualisationReflection.html">9</a>
-      <a href="ArtisticDataVisualisation.html">10</a>
+      <a href="ExamReflection.html">10</a>
        <a href="CommunicatingData.html">&raquo;</a>
   </section>
 
