--- a/Blogs/TheoriesOfRepresentation.html
+++ b/Blogs/TheoriesOfRepresentation.html
@@ -140,7 +140,7 @@ Through this article, Kidd has adequately advanced her thesis, in that, <cite>â€
         <a href="EthicsAndRiskyTechnology.html">7</a>
         <a href="HeatmapReflection.html">8</a>
         <a href="DataVisualisationReflection.html">9</a>
-        <a href="ArtisticDataVisualisation.html">10</a>
+        <a href="ExamReflection.html">10</a>
          <a href="HistoricDataVisualisation.html">&raquo;</a>
     </section>
 
