--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -113,7 +113,7 @@
       <a href="EthicsAndRiskyTechnology.html">7</a>
       <a href="HeatmapReflection.html">8</a>
       <a href="DataVisualisationReflection.html">9</a>
-      <a href="ArtisticDataVisualisation.html">10</a>
+      <a href="ExamReflection.html">10</a>
       <a href="EthicsAndRiskyTechnology.html">&raquo;</a>
   </section>
   </main>
