--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -93,7 +93,7 @@
     </section>
 
     <!-- Refernces -->
-    <section style="max-width: 600px; margin: auto;">
+    <section class="references">
       <h2><strong>References</strong></h2>
 
       <p>Rouse, M. (2019) <cite>User Interface (UI).</cite> [Online] Available at: 
