--- a/References/index.html
+++ b/References/index.html
@@ -103,6 +103,11 @@
       <a href= "https://thisistatistics.org/florence-nightingale-the-lady-with-the-data/">
         https://thisistatistics.org/florence-nightingale-the-lady-with-the-data/</a> (Accessed 5 August 2020)</p>
 
+        <p>Barcelona Field Studies Centre (2020) 
+          <cite>Data Presentation: Pie Charts<cite> [Online] Available at:
+          <a href= "https://geographyfieldwork.com/DataPresntationPieChart.htm">
+            https://geographyfieldwork.com/DataPresntationPieChart.htm</a> (Accessed 22 November 2020)</p>
+
         <p>Grigier, M. (2016) <cite>The digital age of data art.</cite> [Online] Available at: 
         <a href= “https://techcrunch.com/2016/05/08/the-digital-age-of-data-art/amp/”> 
           https://techcrunch.com/2016/05/08/the-digital-age-of-data-art/amp/ </a> (Accessed 16 September 2020)</p>
